[package]
name = "gmtk23"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
bevy = { version = "0.10.1", features = ["serialize"] }
bevy_egui = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"



# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"